# claude_monitor

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.claude/agents/: security-reviewer.md
.claude/skills/claude-skill-self-improvement/: SKILL.md
.claude/skills/code-review-to-fix/: SKILL.md
.claude/skills/daemon-restart/: SKILL.md
.claude/skills/esp32-firmware/: SKILL.md
.claude/skills/firmware-flash/: SKILL.md
.github/: pull_request_template.md
.github/workflows/: commitlint.yml  release.yml
daemon/: pyproject.toml
daemon/claude_monitor/: __init__.py  __main__.py  _version.py  ble_manager.py  ble_multi.py  cli.py  config.py  daemon.py  http_server.py  lock.py  pairing.py  protocol.py  session_tracker.py  terminal_mapper.py  window_focus.py
daemon/tests/: conftest.py  test_daemon.py  test_http_server.py  test_lock.py  test_pairing.py  test_session_tracker.py  test_terminal_mapper.py  test_window_focus.py
firmware/: inject_version.py  platformio.ini  remove_map_flag.py
firmware/src/: ble_protocol.cpp  ble_protocol.h  display_manager.cpp  display_manager.h  main.cpp  ota.h  session_store.cpp  session_store.h  theme.h  touch_handler.cpp  touch_handler.h  util.h
firmware/src/animation/: animation.h  clawd_anim.h  error_anim.h  idle_anim.h  input_anim.h  permission_anim.h  sin_lut.cpp  thinking_anim.h  tool_use_anim.h
firmware/src/board/: board_config.h  cyd_2432s028_v2.h  cyd_2432s028c.h  cyd_2432s028r.h  cyd_e32r28t.h
firmware/test/test_native/: native_compat.h  test_state_logic.cpp
hooks/: claude-monitor-hook.ps1  claude-monitor-hook.sh  hooks.json  install-opencode.ps1  install-opencode.sh  install.ps1  install.sh  opencode-plugin.js  uninstall.ps1  uninstall.sh
images/: render_sprites.py
