[project]
name = "claude-monitor"
version = "0.1.0"
description = "Host daemon for Claude Monitor ESP32 display"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9",
    "psutil>=5.9",
    "bleak>=0.22",
]

[project.scripts]
claude-monitor = "claude_monitor.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
